--- a/includes/libft/Makefile
+++ b/includes/libft/Makefile
@@ -1,54 +1,85 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: lbarreto <lbarreto@student.42.rio>         +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/10/01 13:33:33 by natrodri          #+#    #+#              #
-#    Updated: 2025/06/09 11:49:57 by lbarreto         ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+CC = cc
+
+CFLAGS = -Wall -Werror -Wextra
 
 NAME = libft.a
 
-FLAGS = -g -Wall -Werror -Wextra
+SRCS = ft_isascii.c \
+ft_memcpy.c \
+ft_putstr_fd.c \
+ft_strlcat.c \
+ft_strrchr.c \
+ft_atoi.c \
+ft_isdigit.c \
+ft_memmove.c \
+ft_split.c \
+ft_strlcpy.c \
+ft_strtrim.c \
+ft_bzero.c \
+ft_isprint.c \
+ft_memset.c \
+ft_strchr.c	\
+ft_strlen.c \
+ft_substr.c \
+ft_calloc.c \
+ft_itoa.c \
+ft_putchar_fd.c \
+ft_strdup.c \
+ft_strmapi.c \
+ft_tolower.c \
+ft_isalnum.c \
+ft_memchr.c \
+ft_putendl_fd.c \
+ft_striteri.c \
+ft_strncmp.c \
+ft_toupper.c \
+ft_isalpha.c \
+ft_memcmp.c \
+ft_putnbr_fd.c \
+ft_strjoin.c \
+ft_strnstr.c \
+ft_putnbr_base.c	\
+ft_putnbr.c  \
+ft_putstr.c  \
+ft_printf.c   \
+ft_putpointer.c \
+get_next_line_utils.c \
+get_next_line.c \
+ft_putchar.c \
+ft_putnbr.c \
+ft_putstr.c \
+ft_putnbr_base.c \
+ft_putpointer.c \
+ft_printf_fd.c \
+ft_strconcat.c \
+ft_strjoinfree.c \
+get_next_line.c \
+get_next_line_utils.c
 
-FUNCTIONS = ft_isprint.c     ft_putendl_fd.c  ft_strlcat.c  ft_substr.c \
-ft_atoi.c     ft_itoa.c        ft_putnbr_fd.c   ft_strlcpy.c  ft_tolower.c \
-ft_bzero.c    ft_memchr.c      ft_putstr_fd.c   ft_strlen.c   ft_toupper.c \
-ft_calloc.c   ft_memcmp.c      ft_split.c       ft_strmapi.c \
-ft_isalnum.c  ft_memcpy.c      ft_strchr.c      ft_strncmp.c \
-ft_isalpha.c  ft_memmove.c     ft_strdup.c      ft_strnstr.c \
-ft_isascii.c  ft_memset.c      ft_striteri.c    ft_strrchr.c \
-ft_isdigit.c  ft_putchar_fd.c  ft_strjoin.c     ft_strtrim.c ft_strndup.c \
-ft_strcmp.c	ft_printf_fd.c	ft_printf.c	ft_putchar.c	ft_putnbr.c \
-ft_putnbr_base.c	ft_putpointer.c		ft_putstr.c 	ft_strjoinfree.c \
-ft_strconcat.c
 
-BONUS_FCT = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+BONUS_SRCS = ft_lstnew_bonus.c	ft_lstadd_front_bonus.c	ft_lstsize_bonus.c \
+ft_lstlast_bonus.c	ft_lstadd_back_bonus.c	ft_lstdelone_bonus.c	\
+ft_lstclear_bonus.c	ft_lstiter_bonus.c	ft_lstmap_bonus.c
 
-OBJECTS=$(FUNCTIONS:.c=.o)
+OBJS = $(SRCS:.c=.o)
 
-BONUS_OBJ=$(BONUS_FCT:.c=.o)
+BONUS_OBJS = $(BONUS_SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME): $(OBJECTS)
-	@ar rcs $(NAME) $(OBJECTS)
+$(NAME): $(OBJS)
+	ar rcs $(NAME) $(OBJS)
 
 .c.o:
-	cc $(FLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
 
-BONUS_OBJ: $(BONUS_FCT)
-	@cc -Wall -Wextra -Werror -c $(BONUS_FCT) -o $(BONUS_OBJ)
-
-bonus: $(BONUS_OBJ) $(NAME)
-
-clean:
-	@rm -f $(OBJECTS) $(BONUS_OBJ)
+clean: 
+	rm -f $(OBJS) $(BONUS_OBJS)
 
 fclean: clean
-	@rm -f $(NAME)
+	rm -f $(NAME)
 
-re: fclean all
+re: fclean $(NAME)
+
+bonus: $(NAME) $(BONUS_OBJS)
+	ar rcs $(NAME) $(BONUS_OBJS)
