Feat: As validações de abertura do arquivo do mapa já estão sendo feitas corretamente e comecei o parsing do mapa e suas validações, falta testar essa última parte

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "libft.h": "c",
-        "kitty3d.h": "c"
+        "kitty3d.h": "c",
+        "random": "c"
     }
 }
