--- a/includes/libft/Makefile
+++ b/includes/libft/Makefile
@@ -54,7 +54,8 @@ ft_printf_fd.c \
 ft_strconcat.c \
 ft_strjoinfree.c \
 get_next_line.c \
-get_next_line_utils.c
+get_next_line_utils.c \
+ft_isspace.c
 
 
 BONUS_SRCS = ft_lstnew_bonus.c	ft_lstadd_front_bonus.c	ft_lstsize_bonus.c \
