--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "libft.h": "c",
         "kitty3d.h": "c",
-        "random": "c"
+        "random": "c",
+        "stdio.h": "c"
     }
 }
