Feat Door: Finished door implementantion and fixed all leaks and segfaults, included an extra color on minimap to show the current door stage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "libft.h": "c",
         "kitty3d_bonus.h": "c",
-        "kitty3d.h": "c"
+        "kitty3d.h": "c",
+        "math.h": "c",
+        "mlx.h": "c"
     }
 }
